syntax = "proto3";

package export;
option go_package = "./v1;v1";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

import "resource_export.proto";

service Service {

  rpc PageExport (PageExportRequest) returns (PageExportReply) {
    option (google.api.http) = {
      get: "/resource/v1/exports"
    };
  }

  rpc AddExport (AddExportRequest) returns (AddExportReply) {
    option (google.api.http) = {
      post: "/resource/v1/export",
      body:"*"
    };
  }

  rpc AddExportExcel (AddExportExcelRequest) returns (AddExportExcelReply) {
    option (google.api.http) = {
      post: "/resource/v1/export/excel",
      body:"*"
    };
  }

  rpc DeleteExport (DeleteExportRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/resource/v1/export"
    };
  }
}


